fix: use zwsp to handle domain overflow

--- a/site/styles.css
+++ b/site/styles.css
@@ -466,7 +466,7 @@ nav a {
 }
 
 #instances {
-  padding: 4rem;
+  padding: 3rem;
 }
 #instances h3 {
   max-width: 600px;
